--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.hibernate.ddl-auto = none
 #Mail Config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username="ducminhns2004@gmail.com"
-spring.mail.password="sqjh rjws tvff ykpv"
+spring.mail.username=ducminhns2004@gmail.com
+spring.mail.password=zrbyfaedkhswkptk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
