--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ spring.jpa.hibernate.ddl-auto = none
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ducminhns2004@gmail.com
-spring.mail.password=zrbyfaedkhswkptk
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
