--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #Debug log for spring security
 #logging.level.org.springframework.security=DEBUG
+
+#Batch Config
+spring.batch.job.enabled=true
+spring.batch.initialize-schema=never
