commit format property file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,11 @@ spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=SE1846
 spring.datasource.username=sa
 spring.datasource.password=123456
+
+## SpringJpa Config
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
-
-## Hibernate Properties
-
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = none
 
 #Mail Config
