--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#DataSource Config
 spring.application.name=se1845
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=SE1846
@@ -14,7 +15,7 @@ spring.jpa.hibernate.ddl-auto = none
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ducminhns2004@gmail.com
-spring.mail.password=
+spring.mail.password=lgsltpudhfylqsku
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
